tests/machine/x/hs/order_by_map.error

/workspace/mochi/tests/machine/x/hs/order_by_map.hs:100:6: error:
    parse error on input ‘=’
    |
100 | data = [Map.fromList [("a", 1), ("b", 2)], Map.fromList [("a", 1), ("b", 1)], Map.fromList [("a", 0), ("b", 5)]]
    |      ^


Context around line 100:
   98| 
   99| 
  100| data = [Map.fromList [("a", 1), ("b", 2)], Map.fromList [("a", 1), ("b", 1)], Map.fromList [("a", 0), ("b", 5)]]
  101| 
  102| sorted = map snd (List.sortOn fst [ ( Map.fromList [("a", fromMaybe (error "missing") (Map.lookup "a" (x))), ("b", fromMaybe (error "missing") (Map.lookup "b" (x)))], x ) | x <- data ])
